--- a/Dot - Web/public_html/style.css
+++ b/Dot - Web/public_html/style.css
@@ -10,3 +10,5 @@ html { height: 100%; }
 body { margin: 0; padding: 0; min-height: 100%; height: 100%; overflow: hidden; }
 
 #matrix { margin: 0; padding: 0; width: 100%; min-height: 100%; height: 100%; height: auto !important; overflow: hidden;}
+
+#console { position: absolute; z-index: 100; top: 10px; right: 10px; background: RGBA(0, 0, 0, 0.8); color: #fff; padding: 10px; }
