--- a/Dot - Web/public_html/style.css
+++ b/Dot - Web/public_html/style.css
@@ -12,3 +12,6 @@ body { margin: 0; padding: 0; min-height: 100%; height: 100%; overflow: hidden; 
 #matrix { margin: 0; padding: 0; width: 100%; min-height: 100%; height: 100%; height: auto !important; overflow: hidden; cursor: none;}
 
 #console { position: absolute; z-index: 100; top: 10px; right: 10px; background: RGBA(0, 0, 0, 0.8); color: #fff; padding: 10px; }
+
+span.animation { position: absolute; }
+span.animation.already-taken { width: 20px; height: 20px; background: url(sprites/already-taken.png) no-repeat top left; }
