--- a/Dot - Web/public_html/style.css
+++ b/Dot - Web/public_html/style.css
@@ -11,7 +11,14 @@ body { margin: 0; padding: 0; min-height: 100%; height: 100%; overflow: hidden; 
 
 #matrix { margin: 0; padding: 0; width: 100%; min-height: 100%; height: 100%; height: auto !important; overflow: hidden; cursor: none;}
 
-#console { position: absolute; z-index: 100; top: 10px; right: 10px; background: RGBA(0, 0, 0, 0.8); color: #fff; padding: 10px; }
+#scores { border-width: 0 0 1px 1px; border-style: solid; border-color: #555; margin: 0; padding: 10px 20px; background:RGBA(255, 255, 255, 0.9); border-radius: 0 0 0 10px; position: absolute; top: 0; right: 0; }
+#scores span { display: block; margin: 3px 0; font-family: 'Calibri'; width: 100px; }
+#scores span.red { color: #CE3333; }
+#scores span.blue { color: #3737B3; }
+#scores b { display: block; float: right; }
 
-span.animation { position: absolute; }
+#console { position: absolute; z-index: 100; top: 100px; right: 10px; background: RGBA(0, 0, 0, 0.8); color: #fff; padding: 10px; }
+
+span.animation { position: absolute; cursor: none; }
 span.animation.already-taken { width: 20px; height: 20px; background: url(sprites/already-taken.png) no-repeat top left; }
+
